personal-web-app/k8s/storage-and-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fahim-personal-app-netpol
  labels:
    app: fahim-personal-app
    developer: s-m-fahim-alam
spec:
  podSelector:
    matchLabels:
      app: fahim-personal-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {}
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - {}
